--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <!-- 核心重定向配置：0 表示延迟0秒跳转，url 是目标地址 -->
-    <meta http-equiv="Refresh" content="0; url=https://www.example.com">
-    <title>页面重定向中...</title>
+    <meta http-equiv="Refresh" content="0; url=https://passkey.phphy.com/">
+    <title>FIDO配置界面跳转</title>
     <style>
         /* 简单样式，提升用户体验 */
         body {
@@ -27,8 +27,8 @@
 </head>
 <body>
     <div class="tip">
-        <p>页面正在重定向，请稍候...</p>
-        <p>如果没有自动跳转，请点击 <a href="https://www.example.com">这里</a></p>
+        <p>FIDO配置界面跳转</p>
+        <p>如果没有自动跳转，请点击 <a href="https://passkey.phphy.com/">这里</a></p>
     </div>
 </body>
 </html>
